# vOS-Kernel

./: LICENSE  README.md  boot.S  build.sh  kernel.S  kernel.c  kernel.ld
src/: .gitignore  Makefile  boot.S  build.sh  command_handler.c  command_handler.h  kernel-uefi.ld  kernel.c  kernel.h  kernel.ld  qemu.ld  rpi.ld  uefi-boot.c
src/Boot/: boot.S  boot.c  uefi-boot.c
src/Include/: .kernel.h.swp  command_handler-dev.h  command_handler.h  fs.h  gic.h  heartbeat.h  kernel.h  scheduler.h  syscalls.h  timer.h  uart.h  vstring.h  watch.h
src/Lib/: command_handler-dev.c  command_handler.c  fs.c  gic.c  heartbeat.c  kernel.c  scheduler.c  syscalls.c  timer.c  uart.c  vstring.c  watch.c
src/pico2/: CMakeLists.txt  Makefile  arm-toolchain.cmake  linker.ld
src/pico2/Boot/: stage1.c  stage2-arm.S  stage2-hybrid.c  stage2-risc.S
src/pico2/Lib/: kernel.c
src/qraft/: .gitignore  CMakeLists.txt  README.md
src/qraft/src/: qraft-arm.c  qraft-risc.c
src/vlibc/: .gitignore  test_vstring.c  vstring.c  vstring.h
